style.css
html{
    scroll-snap-type: y mandatory;
}

body{
    margin:0;
    font-family:cursive;
    overflow-y: auto;
    overflow-x: hidden;
    background:rgb(30, 31, 44);
    display:flex;
    flex-direction:column;
    justify-content: center;
    align-items: center;
}

button{
    font-family:inherit;
    cursor:pointer;
}

#frame {
    position:absolute;
    width:20vw;
    height:20vh;
    z-index:0;
    top: 10%;
    left:7%;
    transform:rotate(10deg);
    transition:all 1s ease;
}

#bgs {
    position:absolute;
    width:20vw;
    height:20vh;
    z-index:-1;
    top: 10%;
    left:7%;
    transform:rotate(10deg);
    transition:all 1s ease;
}

#info{
    scroll-snap-align: end;
    width:100vw;
    height:100vh;
    display:flex;
    justify-content: space-between;
    align-items: center;
    flex-direction:column;
    box-sizing: border-box;
    padding:1em
}

#info *{
    color:rgb(255, 255, 255);
    text-align:center;
}

#desc{
    display:flex;
    align-items: center;
    justify-content: center;
}

#desc p{
    margin:1em;
    font-size:1.2em;
    text-align:left;
    width:50%
}

#char{
    height:50vh;
    transition: all 1s ease;
}

.fade-out{
    opacity:0;
    transform:scale(0.9);
}

.fade-in{
    opacity:1;
    transform:scale(1);
}

#info h1{
    font-size:4em
}

#title{
    margin-left:3em;
    margin-top:2em;
    justify-content: flex-start;
    align-items: center;
    flex-direction:column;
}

#title h1{
    font-size:3em
}

#chapters{
    scroll-snap-align: start;
    width:100vw;
    height:90vh;
    display:flex;
    align-items: center;
    justify-content: space-evenly;
}

.chapter{
    display:flex;
    flex-direction:column;
    background:rgb(144, 124, 124);
    height:75%;
    width:25%;
    align-items: center;
    justify-content: space-between;
    box-sizing: border-box;
    padding:2em;
    border-radius:2em;
    background-image: url("");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    transition: all 0.3s ease
}

.chapter:hover{
    transform:translateY(-5%)
}

.ch-title{
    color:white;
    -webkit-text-stroke: black 1px;
}

.ch-btn{
    background:grey;
    font-size:2em;
    border-radius:1em;
    width:90%;
    height:15%;
    transition:all 0.3s ease;
}
.ch-btn.available{
    background:greenyellow;
}
.ch-btn.available:hover{
    background:rgb(80, 131, 4);
}

#ch1{
    background-image: url("../images/backgrounds/chapter1Cover.jpg");
    background-position: 70%;
}

#ch2{
    background-image: url("../images/backgrounds/CityCentre.jpg");
    background-position: 70%;
}

#ch3{
    background-image: url("../images/backgrounds/question-marks.jpg");
    opacity:0.5;
}

#more-chapters{
    height:10vh;
    width:100vw;
    display:flex;
    align-items: center;
    justify-content: center;
}

#more-chapters h3{
    color:white;
    -webkit-text-stroke:black 0.5px;
}

